# video-feed-crawler

./: .gitignore  README.md  celery_app.py  celerybeat-schedule-shm  celerybeat-schedule-wal  celeryconfig.py  docker-compose.yml  dockerfile  main.py  pyproject.toml  selenium-test.py  selenium.ipynb  workflow.drawio
.devcontainer/: devcontainer.json  docker-compose.yml  dockerfile
.github/workflows/: cd.yml  ci.yml
crawler/: __init__.py
database/: __init__.py
tasks/: crawler_tasks.py  math_tasks.py
tests/: conftest.py  test_all.py  test_tasks.py
